--- a/Pyther.WindowX/Pyther.WindowX.csproj
+++ b/Pyther.WindowX/Pyther.WindowX.csproj
@@ -11,6 +11,7 @@
       <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.2.230118.102" />
       <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.755" />
       <PackageReference Include="PInvoke.User32" Version="0.7.124" />
+      <PackageReference Include="System.Drawing.Common" Version="7.0.0" />
   </ItemGroup>
 
   <ItemGroup>
